--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <input type="number" min="1" max="9999" >
+    <button>Create Canvas</button>
     <script src="./app.js"></script>
 </body>
 </html>
